--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -9,18 +9,33 @@
             color: white;
             padding: 15px;
         }
-
         .content h1 {
             color: white;
         }
+        ul {
+            list-style-type: square;
+        }
+        #history {
+            display: none;
+        }
     </style>
+    <script src="js/jquery.min.js"></script>
 </head>
 
 <body>
     <div class="container">
         <div class="content">
-            <h1 id="title"></h1>
-            <p id="description"></p>
+            <div id="info">
+                <h1 id="title"></h1>
+                <p id="description"></p>
+                <button class="button is-outlined is-white" id="historyButton"></button>
+            </div>
+            <div id="history">
+                <button class="button is-outlined is-white is-small backButton" id="infoButton"></button>
+                <button class="button is-outlined is-white is-small is-pulled-right" id="clearHistoryButton"></button>
+                <br><br>
+                <div id="history-list"></div>
+            </div>
         </div>
     </div>
     <script src="js/index.js"></script>
