--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="css/bulma.min.css">
     <style>
         @font-face {
-            font-family: "montserrat";
-            src: url("fonts/Montserrat-Bold.ttf");
+            font-family: "Lato";
+            src: url("fonts/Lato-Black.ttf");
         }
 
         body {
@@ -19,7 +19,7 @@
         .content h1 {
             color: white;
             margin-bottom: 5px;
-            font-family: "Montserrat", sans-serif;
+            font-family: "Lato", sans-serif;
         }
 
         ul {
